--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -70,13 +70,22 @@
 }
 
 .product-display-img {
-    width: 550px;
-    height: 450px;
+    width: 600px;
+    height: 500px;
 }
 
 .img-list-switch {
     width: 180px;
     height: 120px;
+}
+
+.button-view-more-options {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 8px;
 }
 
 
