--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -11,6 +11,8 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    width: 70vw;
 }
 
 .product-display-img-list {
@@ -21,18 +23,18 @@
     align-items: center;
     padding: 10px;
     gap: 5px;
-    margin-top: 10px;
     cursor: pointer;
 }
 
 .product-display-right {
-    margin: 0px 90px;
+    margin: 0px 50px;
     display: flex;
     flex-direction: column;
-    max-width: 700px;
+    width: 30vw;
+    min-width: 350px;
 }
 
-.product-display-right h1 {
+.product-display-right h2 {
     display: flex;
     justify-content: center;
     padding: 10px;
@@ -58,7 +60,7 @@
     padding: 10px;
     color: #ffffff;
     background-color: #EF4444;
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 700;
 }
 
@@ -69,9 +71,19 @@
     color: #3d3d3d;
 }
 
+.ant-image-mask{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .product-display-img {
-    width: 600px;
-    height: 500px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .img-list-switch {
@@ -93,19 +105,25 @@
     .product-display {
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: center;
         margin: 0px 70px;
         padding-top: 20px;
         gap: 20px;
     }
-
-    .product-display-img {
-        width: 450px;
-        height: 350px;
+    /* .ant-image-mask{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
+    .product-display-img {
+        width: 100%;
+        height: 100%;
+    } */
     
     .product-display-right {
-        justify-content: center;
+        justify-items: start;
     }
 }
 @media (max-width: 768px) {
@@ -117,11 +135,17 @@
         padding-top: 20px;
         gap: 20px;
     }
-
-    .product-display-img {
-        width: 350px;
-        height: 250px;
+/* 
+    .ant-image-mask{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
+    .product-display-img {
+        width: 100%;
+        height: 100%;
+    } */
 
     .img-list-switch {
         width: 100px;
