--- a/src/pages/css/Motor.css
+++ b/src/pages/css/Motor.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-items: center;
-    align-items: center;
+    align-items: stretch;
     gap: 20px;
     margin: 40px auto;
     animation: fadeIn 1s;
