--- a/src/components/popular_part/Popular.css
+++ b/src/components/popular_part/Popular.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     margin: 40px auto;
     gap: 20px;
     animation: fadeIn 0.5s;
