--- a/src/components/product_display/ProductDisplay.css
+++ b/src/components/product_display/ProductDisplay.css
@@ -3,7 +3,7 @@
     justify-content: center;
     margin: 0px 70px;
     padding-top: 30px;
-    gap: 20px;
+    gap: 10px;
 }
 
 .product-display-left {
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 70vw;
+    width: 60vw;
 }
 
 .product-display-img-list {
@@ -30,8 +30,8 @@
     margin: 0px 50px;
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    min-width: 350px;
+    width: 40vw;
+    min-width: 320px;
 }
 
 .product-display-right h2 {
@@ -49,7 +49,7 @@
     padding: 10px;
     font-size: 16px;
     font-weight: 600;
-    gap: 15px;
+    gap: 10px;
     font-family: sans-serif;
     color: #3d3d3d;
 }
@@ -71,11 +71,12 @@
     color: #3d3d3d;
 }
 
-.ant-image-mask{
+.ant-image-mask {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    min-height: 480px;
 }
 
 .product-display-img {
@@ -84,6 +85,12 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+}
+
+.image-ant-custom{
+    object-fit: contain;
+    min-width: 640px;
+    min-height: 480px;
 }
 
 .img-list-switch {
@@ -111,16 +118,16 @@
         padding-top: 20px;
         gap: 20px;
     }
-    /* .ant-image-mask{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
+
+    .ant-image-mask {
+        min-height: 360px;
     }
-    .product-display-img {
-        width: 100%;
-        height: 100%;
-    } */
+
+    .image-ant-custom{
+        min-width: 480px;
+        min-height: 360px;
+    }
+    
     
     .product-display-right {
         justify-items: start;
@@ -135,17 +142,15 @@
         padding-top: 20px;
         gap: 20px;
     }
-/* 
-    .ant-image-mask{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
+
+    .ant-image-mask {
+        min-height: 240px;
     }
-    .product-display-img {
-        width: 100%;
-        height: 100%;
-    } */
+
+    .image-ant-custom{
+        min-width: 320px;
+        min-height: 240px;
+    }
 
     .img-list-switch {
         width: 100px;
