add(Contact): add loading spin when submit contact message form

--- a/src/components/blog_display/BlogDisplay.css
+++ b/src/components/blog_display/BlogDisplay.css
@@ -15,6 +15,10 @@
     align-items: center;
     width: 100%;
 }
+.blog-display-title h2{
+    margin-left: 90px;
+    margin-right: 90px;
+}
 
 .blog-display-title hr {
     width: 20%;
